{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 109,
  "lineage": "326f919d-e5e7-5a24-75c9-68c2c7f51bdb",
  "resources": [
    {
      "module": "module.Ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "static_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:640168432352:instance/i-013ffaeb057af3eb3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013ffaeb057af3eb3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_terra_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0145d0ff3665cbedd",
            "private_dns": "ip-10-0-1-221.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.221",
            "public_ip": "44.205.22.201",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-040a690a9bb5236c6",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0afbd8b2dd688a8a9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07bab35b3c12b739b",
            "tags": {
              "Name": "static_ec2-1"
            },
            "tags_all": {
              "Name": "static_ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afbd8b2dd688a8a9"
            ]
          },
          "dependencies": [
            "module.Ec2_instances.aws_key_pair.new_terra_key",
            "module.Security_group.aws_security_group.Ec2_sg",
            "module.VPC.aws_subnet.public_subnet",
            "module.VPC.aws_vpc.static_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e86e20dae9224db8",
            "arn": "arn:aws:ec2:us-east-1:640168432352:instance/i-02359742a2a7f0af7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02359742a2a7f0af7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_terra_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01483b4b266a8d8ff",
            "private_dns": "ip-10-0-2-14.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.14",
            "public_ip": "3.86.238.36",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03ba3da7b5ad34f0c",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0afbd8b2dd688a8a9"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0aba7ac8a7412ecb2",
            "tags": {
              "Name": "static_ec2-2"
            },
            "tags_all": {
              "Name": "static_ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0afbd8b2dd688a8a9"
            ]
          },
          "dependencies": [
            "module.Ec2_instances.aws_key_pair.new_terra_key",
            "module.Security_group.aws_security_group.Ec2_sg",
            "module.VPC.aws_subnet.public_subnet",
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "static_web_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:640168432352:loadbalancer/app/tf-lb-20241018125906179900000007/cdeb19884f6fb68a",
            "arn_suffix": "app/tf-lb-20241018125906179900000007/cdeb19884f6fb68a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb-20241018125906179900000007-138497071.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:640168432352:loadbalancer/app/tf-lb-20241018125906179900000007/cdeb19884f6fb68a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb-20241018125906179900000007",
            "name_prefix": "tf-lb-",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c8ee4352081949d1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07bab35b3c12b739b"
              },
              {
                "subnet_id": "subnet-0aba7ac8a7412ecb2"
              }
            ],
            "subnets": [
              "subnet-07bab35b3c12b739b",
              "subnet-0aba7ac8a7412ecb2"
            ],
            "vpc_id": "vpc-01cfb3dea92df684b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.Security_group.aws_security_group.Lb_sg",
            "module.VPC.aws_subnet.public_subnet",
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "static_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:640168432352:listener/app/tf-lb-20241018125906179900000007/cdeb19884f6fb68a/d318e6878fcb3b04",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:640168432352:targetgroup/tf-20241018125852723700000004/d8ee0f08c075ed16",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:640168432352:listener/app/tf-lb-20241018125906179900000007/cdeb19884f6fb68a/d318e6878fcb3b04",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:640168432352:loadbalancer/app/tf-lb-20241018125906179900000007/cdeb19884f6fb68a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.Load_balancer.aws_lb.static_web_lb",
            "module.Load_balancer.aws_lb_target_group.static_tg",
            "module.Security_group.aws_security_group.Lb_sg",
            "module.VPC.aws_subnet.public_subnet",
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Load_balancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "static_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:640168432352:targetgroup/tf-20241018125852723700000004/d8ee0f08c075ed16",
            "arn_suffix": "targetgroup/tf-20241018125852723700000004/d8ee0f08c075ed16",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:640168432352:targetgroup/tf-20241018125852723700000004/d8ee0f08c075ed16",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:640168432352:loadbalancer/app/tf-lb-20241018125906179900000007/cdeb19884f6fb68a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-20241018125852723700000004",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01cfb3dea92df684b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168432352:security-group/sg-0afbd8b2dd688a8a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afbd8b2dd688a8a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241018125852717800000003",
            "name_prefix": "terraform-",
            "owner_id": "640168432352",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cfb3dea92df684b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168432352:security-group/sg-0c8ee4352081949d1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c8ee4352081949d1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241018125852710200000002",
            "name_prefix": "terraform-",
            "owner_id": "640168432352",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01cfb3dea92df684b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "static_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168432352:internet-gateway/igw-0c1f65853246e7cd6",
            "id": "igw-0c1f65853246e7cd6",
            "owner_id": "640168432352",
            "tags": {
              "Name": "static_igw"
            },
            "tags_all": {
              "Name": "static_igw"
            },
            "vpc_id": "vpc-01cfb3dea92df684b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0c1f65853246e7cd6",
            "id": "r-rtb-0b3c4d4a43e85b80c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b3c4d4a43e85b80c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_internet_gateway.static_igw",
            "module.VPC.aws_route_table.public_RT",
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168432352:route-table/rtb-0b3c4d4a43e85b80c",
            "id": "rtb-0b3c4d4a43e85b80c",
            "owner_id": "640168432352",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c1f65853246e7cd6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_RT"
            },
            "tags_all": {
              "Name": "public_RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-01cfb3dea92df684b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_asst",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cfe6c3fdeb2054b",
            "route_table_id": "rtb-0b3c4d4a43e85b80c",
            "subnet_id": "subnet-07bab35b3c12b739b"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public_RT",
            "module.VPC.aws_subnet.public_subnet",
            "module.VPC.aws_vpc.static_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cfe663bf8bc91a4c",
            "route_table_id": "rtb-0b3c4d4a43e85b80c",
            "subnet_id": "subnet-0aba7ac8a7412ecb2"
          },
          "dependencies": [
            "module.VPC.aws_route_table.public_RT",
            "module.VPC.aws_subnet.public_subnet",
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168432352:subnet/subnet-07bab35b3c12b739b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07bab35b3c12b739b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640168432352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_1"
            },
            "tags_all": {
              "Name": "Public_Subnet_1"
            },
            "vpc_id": "vpc-01cfb3dea92df684b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.static_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168432352:subnet/subnet-0aba7ac8a7412ecb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aba7ac8a7412ecb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "640168432352",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public_Subnet_2"
            },
            "tags_all": {
              "Name": "Public_Subnet_2"
            },
            "vpc_id": "vpc-01cfb3dea92df684b"
          },
          "dependencies": [
            "module.VPC.aws_vpc.static_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.VPC",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "static_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:640168432352:vpc/vpc-01cfb3dea92df684b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-069db4c55205345f8",
            "default_route_table_id": "rtb-07486a5790abe3532",
            "default_security_group_id": "sg-082958a351805769d",
            "dhcp_options_id": "dopt-0dee04dd0ebb0e343",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01cfb3dea92df684b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07486a5790abe3532",
            "owner_id": "640168432352"
          }
        }
      ]
    }
  ]
}